<resources>
    <string name="app_name">Flintor</string>
    <string name="share_what_you_know_gain_what_you_don_t">Share what you know, Gain what you don\'t</string>
    <string name="welcome_to_flintor">Welcome to Flintor!</string>
    <string name="discover_a_community_where_skills_are_exchange_not_sold">Discover a community where skills are exchange, not sold!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="swap_and_grow">Swap and Grow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="offer_your_expertise_and_learn_new_skills_in_return_no_money_just_knowlegde">Offer your expertise and learn new skills in return -no money, just knowlegde!</string>
    <string name="start_your_skill_journey">Start your skill journey!</string>
    <string name="create_your_profile_list_your_skills_and_connect_with_like_mineded_learners">Create your profile, list your skills, and connect with like -mineded learners!</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your Name</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_havr_an_account">Already havr an account?</string>
    <string name="hello">Hello</string>
    <string name="register_account">Register Account</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="hello_there_login_to_continue">Hello there, login to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_with">or sign with</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_there_please_login_to_continue">Hello there, please login to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="liked">Liked</string>
    <string name="notification">Notification</string>
    <string name="user_account">User Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Like</string>
    <string name="user_acount">User Acount</string>
    <string name="top_skills">Top Skills</string>
    <string name="featured_skills">Featured Skills</string>
    <string name="top_mentors">Top Mentors</string>
    <string name="saved_skills">Saved Skills</string>
    <string name="track_the_skills_you_are_intrested_in_learning_and_start_swapping_with_others">Track the skills you are intrested in learning and start swapping with others!</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="explore_a_wide_range_of_cooking_techniques_from_basic_meal_prept_to_gourmet_dishes_learn_about_flavours_knife_skills_baking_and_creating_balanced_meals_perfect_for_food_lovers_looking_to_expand_their_cooking_repertoire">Explore a wide range of cooking techniques from basic meal prept to gourmet dishes. Learn about flavours, Knife skills, baking and creating balanced meals. Perfect for food lovers looking to expand their cooking repertoire!</string>
    <string name="swap_skills">Swap Skills</string>
</resources>