<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/rimg"
            />

        <TextView
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="#000435"
            android:textSize="34sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account_to_continue"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="131dp"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/full_name"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/example_gmail_com"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput4"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="34dp" />

        <Button
            android:id="@+id/creataccbtn"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000435"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/create_an_account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:id="@+id/r5"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:text="@string/already_havr_an_account" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/r6"
                android:layout_width="83dp"
                android:layout_height="29dp"
                android:text="@string/sign_in"
                android:textColor="#000435" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>