<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            app:srcCompat="@drawable/log" />

        <TextView
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textColor="#000435"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/r9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_there_please_login_to_continue"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/limg" />

        <TextView
            android:id="@+id/ltext7"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/or_sign_with"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/example_gmail_com"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rinput3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/ltext6"
            android:layout_width="122dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="#000435" />

        <Button
            android:id="@+id/loginbtn1"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000435"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="Log in"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/l1"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:text="@string/don_t_have_an_account" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/l2"
                android:layout_width="83dp"
                android:layout_height="29dp"
                android:text="Sign up"
                android:textColor="#000435"
                tools:ignore="HardcodedText" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>