<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardScreen3">

    <TextView
        android:id="@+id/onboardt7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="636dp"
        android:text="@string/start_your_skill_journey"
        android:textColor="#000435"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/onboard8"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="593dp"
        android:text="@string/create_your_profile_list_your_skills_and_connect_with_like_mineded_learners"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/letsgobtn"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="33dp"
        android:backgroundTint="#000435"
        android:text="@string/let_s_go" />

    <ImageView
        android:id="@+id/ob3"
        android:layout_width="358dp"
        android:layout_height="394dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="159dp"
        app:srcCompat="@drawable/ob3" />
</RelativeLayout>