<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home"
    android:backgroundTint="@android:color/transparent">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/homeimg01" />

        <TextView
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_skills"
            android:textColor="#000435"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="15dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="176dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:src="@drawable/homeimg02" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="176dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:src="@drawable/homeimg03" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="176dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:src="@drawable/homeimg04" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="176dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    android:src="@drawable/homeimg03" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/featured_skills"
            android:textColor="#000435"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="15dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/homeimg05" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="248dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/homeimg06" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_mentors"
            android:textColor="#000435"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="15dp"/>

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:src="@drawable/homeimg07" />

    </LinearLayout>

</FrameLayout>
